--- a/css/style-1.css
+++ b/css/style-1.css
@@ -29,6 +29,22 @@ img {
   border-radius: 10px;
 }
 
+.technology:hover {
+  background-color: rgb(228, 228, 228);
+  border-radius: 5px;
+  color: black;
+}
+
+.science:hover {
+  background-color: rgb(228, 228, 228);
+  border-radius: 5px;
+  color: black;
+}
+
+.links-list {
+  gap: 15px;
+}
+
 a,
 a:hover,
 a:active,
@@ -121,18 +137,10 @@ nav {
   padding: 10px;
   justify-content: center;
 }
-/* .body::before {
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  content: "";
-  background: url("https://images.unsplash.com/photo-1568124929262-d6272d42dbf5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80")
-    no-repeat center center / cover;
-  opacity: 0.03;
-} */
 
+.fa-newspaper {
+  font-size: 30px;
+}
 .content {
   display: flex;
   align-items: center;
@@ -170,8 +178,17 @@ nav {
 }
 footer {
   background-color: rgb(194, 194, 194);
-  height: 300px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
+.copy-rights {
+  font-size: 14px;
+  text-align: center;
+}
+
 @media screen and (max-width: 620px) {
   .title {
     font-size: 12px;
